fix(askem): icons not visible
TH-1461.

Askem icons were not shown properly, since the ywere just rectangles.
For some reason the mask-image CSS property was not set properly, even
though the --mask-image variable was given.

NOTE: The askem.scss stylesheet loading was changed in
https://github.com/City-of-Helsinki/events-helsinki-monorepo/commit/
a21d5be61ff3c9be878e85a8e64cdc8b50a28cdc.

--- a/packages/components/src/styles/askem.scss
+++ b/packages/components/src/styles/askem.scss
@@ -128,6 +128,7 @@
   vertical-align: bottom;
   width: 24px;
   margin-left: 16px;
+  mask-image: var(--mask-image);
 }
 
 .rns
@@ -372,6 +373,7 @@
   vertical-align: bottom;
   width: 32px;
   margin-right: 8px;
+  mask-image: var(--mask-image);
 }
 
 .rns
@@ -560,6 +562,7 @@
   vertical-align: bottom;
   width: 24px;
   margin-left: 16px;
+  mask-image: var(--mask-image);
 }
 
 .rns .rns-plugin .rns-inputs .rns-form-submit::before {
